# koda

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  koda.spec  pyproject.toml
.github/workflows/: release.yml
koda/: __init__.py  __main__.py  config.py  updater.py
koda/api/: kodik.py  test.py
koda/player/: launcher.py
koda/storage/: db.py
koda/tui/: app.py  app.tcss
koda/tui/screens/: detail.py  download.py  folder_pick.py  home.py  keys_help.py  library.py  resume_modal.py  search.py  settings.py  version.py
koda/tui/widgets/: poster.py
