[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "koda"
version = "0.2.0"
description = "Console cinema powered by Kodik API"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"

dependencies = [
    "textual>=0.80.0,<1.0.0",
    "httpx>=0.27.0",
    "tomli-w>=1.1.0",
    "plyer>=2.1.0",
]

[project.scripts]
koda = "koda.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["koda"]